# poetry2nix

./: .envrc  .gitignore  .gitlab-ci.yml  .mergify.yml  Build.py  Col.vim  LICENSE  Makefile  README.md  README.org  Vimos linguageprograming.vim  check-fmt  check-fmt.nix  cli.nix  default.nix  default.py  editable.nix  eval_markers.py  fetch-from-pypi.sh  fetch-wheel.sh  fetch_from_legacy.py  flake.nix  generate.py  known-build-systems.json  lib.nix  mk-poetry-dep.nix  overlay.nix  overrides.nix  overrides_and_router_imo.py  pep425.nix  pep508.nix  plugins.nix  pyproject-without-path.py  semver.nix  shell-scripts.nix  shell.nix  statix.toml  test.nix
.github/: PULL_REQUEST_TEMPLATE.md  ci.nix  dependabot.yml  generate-matrix.py  renovate.json
.github/ISSUE_TEMPLATE/: issue-template.md
.github/workflows/: FUNDING.yml  ci.yml  release.yml
dev/: treefmt.nix
docs/: edgecases.md  footguns.md
example_project/: README.org  default.nix  pyproject.toml  shell.nix
example_project/example_project/: __init__.py
fetchers/: default.nix
hooks/: default.nix  imagematte.py  pip-build-hook.sh  pyproject-without-special-deps.py  pyproject-without-url-whl.py  remove-special-dependencies.sh
nix/: sources.json  sources.nix
overrides/: auto-build_systems.json  auto-overrides.nix  build-systems.json  default.nix  filter_setuptools.py  flit-core.nix  offline-maturin-build-hook.sh  orjson.nix  poetry-to-poetry-core.jq  sdist.nix  shapely-rewrite.py  sort-build-systems.jq  sort_overrides.py  t.txt  universal.nix
pkgs/poetry/: default.nix  nixpkgs.nix  pyproject.toml  src.json  update  update-poetry-shell.nix  update.nix  update.py
templates/app/: flake.nix
test/: pyproject.toml  test.nix
tests/: default.nix
tests/affine/: pyproject.toml
tests/affine-pre-2-4/: pyproject.toml
tests/aiopath/: default.nix  pyproject.toml
tests/ansible-molecule/: default.nix  pyproject.toml
tests/apsw/: default.nix  pyproject.toml
tests/argon2-cffi-bindings-python-3-12/: default.nix  pyproject.toml
tests/arrow/: default.nix  pyproject.toml
tests/assorted-pkgs/: pyproject.toml
tests/avro-python3/: default.nix  pyproject.toml
tests/awscli/: default.nix  pyproject.toml
tests/awsume/: default.nix  pyproject.toml
tests/bcrypt/: pyproject.toml
tests/black/: default.nix  pyproject.toml
tests/blinker/: pyproject.toml
tests/blinker-1_6_2/: default.nix  pyproject.toml
tests/cairocffi-no-wheel/: default.nix  pyproject.toml
tests/cairocffi-wheel/: default.nix  pyproject.toml
tests/canonical-module-names/: default.nix  poetry-git-overlay.nix  pyproject.toml
tests/cattrs/: default.nix  pyproject.toml
tests/cattrs-pre-23-2/: pyproject.toml
tests/cdk-nag/: default.nix  pyproject.toml
tests/cffi-pandas-wheel/: default.nix  pyproject.toml
tests/ckzg/: default.nix  pyproject.toml
tests/click/: default.nix  pyproject.toml
tests/click-pre-8_1_8/: default.nix  pyproject.toml
tests/closure-size/: default.nix  pyproject.toml
tests/cmdstanpy/: default.nix  pyproject.toml
tests/color-operations/: default.nix  pyproject.toml
tests/colour/: default.nix  pyproject.toml
tests/commitizen/: default.nix  pyproject.toml
tests/common-pkgs-1/: default.nix  pyproject.toml
tests/common-pkgs-2/: default.nix  pyproject.toml
tests/composable-defaults/: default.nix  pyproject.toml
tests/contourpy-no-wheel/: default.nix
tests/contourpy-wheel/: default.nix  pyproject.toml
tests/cross/: pyproject.toml
tests/cryptography/: pyproject.toml
tests/cryptography-43/: default.nix
tests/cyclonedx-and-sarif-tools/: default.nix  pyproject.toml
tests/dask-dataframe/: default.nix  pyproject.toml
tests/decli/: default.nix  pyproject.toml
tests/decli-pre-0_6_2/: default.nix  pyproject.toml
tests/dependency-environment/: default.nix  pyproject.toml  trivial.py
tests/dependency-groups/: default.nix  pyproject.toml
tests/duckdb-wheel/: default.nix  pyproject.toml
tests/editable/: default.nix  pyproject.toml
tests/editable-egg/: default.nix  paste.ini  pyproject.toml
tests/editable-egg/src/trivial/: __init__.py
tests/eggs/: default.nix  eggs.py  pyproject.toml
tests/env/: default.nix  pyproject.toml
tests/erppeek/: pyproject.toml
tests/eth-utils/: default.nix  pyproject.toml
tests/extended-cross/: default.nix  pyproject.toml
tests/extras/: default.nix  pyproject.toml
tests/fancycompleter-wheel/: default.nix  pyproject.toml
tests/fastapi/: default.nix  pyproject.toml
tests/fastapi-utils/: default.nix  pyproject.toml
tests/fetched-projectdir/: default.nix
tests/file-src-deps/: default.nix  pyproject.toml
tests/file-src-deps-level2/: default.nix  pyproject.toml
tests/file-wheel-deps/: pyproject.toml
tests/file-wheel-deps-level2/: default.nix  pyproject.toml
tests/filelock/: default.nix  pyproject.toml
tests/fiona-source/: default.nix  pyproject.toml
tests/fiona-wheel/: default.nix  pyproject.toml
tests/flink/: default.nix  pyproject.toml
tests/gdal/: pyproject.toml
tests/git-deps/: default.nix  pyproject.toml
tests/git-deps-1_2_0/: pyproject.toml
tests/git-deps-pinned/: default.nix  poetry-git-overlay.nix  pyproject.toml
tests/git-subdirectory-hook/: default.nix  pyproject.toml
tests/gitlint/: default.nix  pyproject.toml
tests/gitlint-core/: default.nix  pyproject.toml
tests/gmsh/: default.nix  pyproject.toml
tests/gnureadline/: pyproject.toml
tests/gobject-introspection/: default.nix  pyproject.toml
tests/grpcio-no-wheel/: default.nix  pyproject.toml
tests/grpcio-wheel/: default.nix
tests/in-list/: default.nix  pyproject.toml
tests/iteration-utilities/: pyproject.toml
tests/jake/: default.nix  pyproject.toml
tests/jinja2-ansible-filters/: pyproject.toml
tests/jq/: default.nix  pyproject.toml
tests/jupyter-ydoc/: default.nix  pyproject.toml
tests/jupyterlab/: pyproject.toml
tests/jupyterlab-3/: default.nix  pyproject.toml
tests/legacy/: default.nix  pyproject.toml
tests/litestar/: default.nix  (+1 more)
tools/: auto_version.py  default.nix  find-build-systems.py  lock-dep-versions.sh  pyproject.toml
(+1084 files in other folders)
