[tool.poetry]
name = "example_project"
version = "0.1.0"
description = "An example project to test poetry2nix"
authors = ["adisbladis <adisbladis@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
