[tool.poetry]
name = "poetry2nix-tools-env"
version = "0.1.0"
description = ""
authors = ["adisbladis <adisbladis@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
black = "^21.12b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
