[tool.poetry]
name = "test-aiopath"
version = "0.1.0"
description = "Test of aiopath package"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiopath = [
  { version = "0.5.12", python = ">=3.7,<3.10" },
  { version = ">=0.6,<0.7", python = ">=3.10,<3.11" },
  { version = ">=0.7,<1", python = ">=3.12,<4" },
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
