[tool.poetry]
name = "ansible-molecule"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jinja2 = "^3.0.3"
ansible = "~5.1.0"
molecule = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
