[tool.poetry]
name = "canonical_module_names"
version = "0.1.0"
description = "poetry2nix test"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pyramid-deferred-sqla = {git = "https://github.com/niteoweb/pyramid_deferred_sqla.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
