[tool.poetry]
name = "closure-size"
version = "1.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
psycopg2 = "*"
trivial = { path = "../trivial" }

[tool.poetry.scripts]
main = "closure_size:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
