[tool.poetry]
name = "common-pkgs-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^5.3.1"
pyparsing = "^2.4.5"
cryptography = "^3"
decorator = "^4.4.1"
flask = "^1.1.1"
pluggy = "^0.13.1"
itsdangerous = "^1.1.0"
more-itertools = "^7.2.0"
ipaddress = "^1.0.23"
oauthlib = "^3.1.0"
coverage = "^4.5.4"
py = "^1.8.0"
psutil = "^5.6.7"
jsonschema = "^3.2.0"
requests-oauthlib = "^1.3.0"
pygments = "^2.5.1"
mock = "^3.0.5"
pbr = "^5.4.4"
pyjwt = "^1.7.1"
wrapt = "^1.11.2"
google-cloud-storage = "^1.23.0"
websocket-client = "^0.56.0"
wcwidth = "^0.1.7"
ipython = "^7.10.0"
boto = "^2.49.0"
httplib2 = "^0.14.0"
prompt-toolkit = "^3.0.0"
atomicwrites = "^1.3.0"
docker = "^4.1.0"

# pip >=20.3 hardcodes its ignorance of a few modules that clash with stdlib
# modules; one of those modules is argparse, so it can only be used where it's
# actually required, otherwise pip thinks it's never installed
#
# Here's the hardcoded list:
# https://github.com/pypa/pip/blob/e6891135776732d137ef3591d58d0de624521628/src/pip/_internal/utils/compat.py#L59
#
# Here's the code that skips over the list:
# https://github.com/pypa/pip/blob/e6891135776732d137ef3591d58d0de624521628/src/pip/_internal/metadata/base.py#L194-L222
argparse = { version = "^1.4.0", python = "<2.7" }

zipp = "^0.6.0"
google-resumable-media = "^0.5.0"
multidict = "^4.6.1"
sqlalchemy = "^1.3.11"
kiwisolver = "^1.1.0"
funcsigs = "^1.0.2"
configparser = "^4.0.2"
tornado = "^6.0.3"
tqdm = "^4.39.0"
google-api-python-client = "^1.7.11"
markdown = "^3.1.1"
oauth2client = "^4.1.3"
aiohttp = "^3.6.2"
pyopenssl = "^19.1.0"
pillow = "^6.2.1"
psycopg2 = "^2.8.4"
bcrypt = "^3.1.7"
mccabe = "^0.6.1"
# matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
