[tool.poetry]
name = "test-contourpy-wheel"
version = "0.1.0"
description = "Test of wheel for contourpy"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
contourpy = "^1.1.0"

[build-system]
requires = ["poetry-core>=1"]
build-backend = "poetry.core.masonry.api"
