[tool.poetry]
name = "trivial"
version = "0.1.0"
description = "poetry2nix test"
authors = ["Your Name <you@example.com>"]
packages = [
  { include = "trivial", from = "src" },
]

[tool.poetry.plugins."paste.app_factory"]
main = "trivial:app_factory"

[tool.poetry.dependencies]
python = "^3.7"
gunicorn = "^20.0.4"
pastedeploy = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
