[tool.poetry]
name = "eggs"
version = "0.1.0"
description = "poetry2nix test"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pyasn1 = "^0.4.8"

[tool.poetry.scripts]
egg-test = "eggs:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
