[tool.poetry]
name = "extras"
version = "0.1.0"
description = "poetry2nix test"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
setuptools-scm = { version = ">=3.4", extras = ["toml"] }

# Extra with dash in the name should work
boto3-stubs = {extras = ["cognito-idp"], version = "^1.17.82"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
