[tool.poetry]
name = "fancycompleter-wheel"
version = "0.1.0"
description = "Test of fancycompleter wheel"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pdbpp = "^0.10.3"
fancycompleter = "^0.9.1"
wmctrl = "^0.4"

[build-system]
requires = ["poetry-core>=1"]
build-backend = "poetry.core.masonry.api"
