[tool.poetry]
name = "test-fastapi-utils"
version = "0.1.0"
description = "Test of python fastapi-utils package"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
fastapi-utils = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
