[tool.poetry]
name = "file-src-deps-level2"
version = "0.1.0"
description = "poetry2nix test"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
file-src-deps = { path = "../file-src-deps" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
