[tool.poetry]
name = "file-src-deps"
version = "0.1.0"
description = "poetry2nix test"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
trivial = { path = "../trivial/dist/trivial-0.1.0.tar.gz" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
