[tool.poetry]
name = "file-wheel-deps-level2"
version = "0.1.0"
description = "poetry2nix test"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
file-wheel-deps = { path = "../file-wheel-deps" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
