[tool.poetry]
name = "gdal-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gdal = "3.9.0"
numpy = "<2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1"]
build-backend = "poetry.core.masonry.api"
