[tool.poetry]
name = "git-deps-pinned"
version = "0.1.0"
description = "poetry2nix test"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
alembic = { git = "https://github.com/sqlalchemy/alembic.git", tag = "rel_1_3_1" }
colorama = {git = "https://github.com/tartley/colorama.git", rev = "4321bbfda9aa190acdad05eb901d3b59439f0ec9" }
s3transfer = { git = "https://github.com/boto/s3transfer.git", branch = "develop" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
